--- a/predecessor-live/package.json
+++ b/predecessor-live/package.json
@@ -1,22 +1,16 @@
-
 {
   "name": "predecessor-live",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Predecessor stats app",
   "main": "server/index.js",
+  "type": "module",
   "scripts": {
     "start": "node server/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "ws": "^8.13.0",
+    "node-fetch": "^2.6.7",
     "cors": "^2.8.5"
   }
 }
-"type": "module",
-"scripts": {
-  "start": "node server/index.js"
-}
-
 
